Issue #3705: py3k aborts if "-c" or "-m" is given a non-ascii value.

Reviewed by Benjamin Peterson.